fix: buttons overflow on home page

--- a/_sass/forms.scss
+++ b/_sass/forms.scss
@@ -67,6 +67,14 @@
 	}
 }
 
+@media (max-width: 480px) {
+	.button-para {
+	  width: 100%;
+	  display: flex;
+	  justify-content: flex-start;
+	}
+  }  
+
 .button-para .link{
 	display: flex;
 	border: none;
